# OrderBook

./: .gitignore  CMakeLists.txt  README.md  build.sh  production.md  progress.txt
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/learn/: page.tsx
include/: backtester.h  execution_strategy.h  market_microstructure_analyzer.h  matching_engine.h  order.h  order_book.h  pool_allocator.h  tick_data.h
src/: almgren_chriss_strategy.cpp  backtester.cpp  execution_strategy.cpp  main.cpp  market_microstructure_analyzer.cpp  matching_engine.cpp  order.cpp  order_book.cpp  tick_data.cpp  twap_strategy.cpp  vwap_strategy.cpp
tests/: test_main.cpp
